--- a/config/default.yaml
+++ b/config/default.yaml
@@ -1,39 +1,39 @@
 # config.yaml
 
 dataset:
-  root: /home/data/cube_cleanup/
-  train_manifest: train.json
-  valid_manifest: valid.json
-  cameras_json: cameras.json
+  hdf5_path: ../../data/mimicgen/multiview/coffee_d1_multiview.hdf5
   batch_size: 128
   num_workers: 8
   pin_memory: true
+  train_ratio: 0.90
+  seed: 42
+  num_episodes: 120
 
 train:
   num_epochs: 38
   lr: 3.0e-5
-  device: cuda:0
-  eval_every: 500
+  device: cuda:3
+  eval_every: 50
   save_every: 5000
   ckpt_dir: ./checkpoints/default/
-  resume_from_last: true
+  resume_from_last: false
 
   # loss weights
   rec_weight: 1.0
   vq_weight: 0.25
   inv_contrastive_weight: 1.0
   dep_contrastive_weight: 0.1
-  temperature: 0.1
+  temperature: 0.07
 
   # camera prediction
-  predict_camera_params: false
+  predict_camera_params: true
   pose_cycle_weight: 0.001
-  crossview_start_step: 0
+  crossview_start_step: 1500
 
 splatter:
   data:
     znear: 0.1
-    zfar: 2.0
+    zfar: 2.5
     white_background: false
     inverted_x: false
     inverted_y: false
@@ -41,9 +41,10 @@ splatter:
 
   model:
     max_sh_degree: 1
-    isotropic: true
-    depth_scale: 1.0
-    depth_bias: 0.0
+    isotropic: false
+    num_gaussians_per_pixel: 4
+    depth_scale: 0.1
+    depth_bias: -0.7
     xyz_scale: 0.1
     xyz_bias: 0.0
     opacity_scale: 1.0
@@ -75,7 +76,7 @@ codebook:
     beta: 0.25
 
 model:
-  fusion_style: cat          # 'cat' or 'plus'
+  fusion_style: plus          # 'cat' or 'plus'
   use_dependent_vq: true
   is_dependent_ae: false
   use_invariant_vq: true
@@ -86,5 +87,5 @@ model:
   grid_tokens_w: 8
 
 wandb:
-  project: splatter_vae
+  project: MimicGen-SplatterVAE
   entity: null
