--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,20 +11,22 @@ dependencies = [
     "numpy<2.0.0",
     "opencv-python>=4.11.0.86",
     "pyyaml>=6.0.3",
-    "robomimic",
-    "robosuite==1.4.1",
+    "robosuite>=1.5.2",
     "torch>=2.9.1",
     "torchvision>=0.24.1",
     "wandb>=0.23.1",
-    "mimicgen",
-    "mujoco==2.3.2",
     "gradio>=4.44.1",
     "scikit-learn>=1.7.2",
+    "mujoco>=3.4.0",
+    "transformers>=4.57.3",
+    "h5py>=3.15.1",
+    "robosuite-models>=1.0.0",
+    "gymnasium>=1.2.3",
+    "pyspacemouse>=1.1.5",
+    "matplotlib>=3.10.8",
 ]
 [tool.uv.extra-build-dependencies]
 gsplat = ["torch"]
 
 [tool.uv.sources]
 gsplat = { git = "https://github.com/nerfstudio-project/gsplat.git" }
-robomimic = { path = "dataset/robomimic", editable = true }
-mimicgen = { path = "dataset/mimicgen", editable = true }
