--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,15 @@
 [submodule "dataset/robosuite"]
 	path = dataset/robosuite
 	url = https://github.com/ARISE-Initiative/robosuite.git
+[submodule "baselines/SNeRL/snerl_official"]
+	path = baselines/SNeRL/snerl_official
+	url = https://github.com/jayLEE0301/snerl_official.git
+[submodule "baselines/SinCro/sincro"]
+	path = baselines/SinCro/sincro
+	url = https://github.com/syeon-yoo/sincro.git
+[submodule "baselines/MV-MWM/MV-MWM"]
+	path = baselines/MV-MWM/MV-MWM
+	url = https://github.com/younggyoseo/MV-MWM.git
+[submodule "baselines/ReViWo/ReViWo"]
+	path = baselines/ReViWo/ReViWo
+	url = https://github.com/lafmdp/ReViWo.git
