--- a/baselines/SinCro/config.yaml
+++ b/baselines/SinCro/config.yaml
@@ -7,7 +7,7 @@ dataset:
   temporal_stride: 3
   num_workers: 8
   pin_memory: true
-  batch_size: 4
+  batch_size: 24
   train_ratio: 0.9
 
 model:
@@ -15,7 +15,7 @@ model:
   netwidth: 256
   netdepth_fine: 8
   netwidth_fine: 256
-  N_rand: 8192
+  N_rand: 2048
   N_samples: 64
   N_importance: 64
   multires: 10
@@ -23,7 +23,7 @@ model:
   i_embed: 0
   use_viewdirs: true
   raw_noise_std: 0.0
-  white_bkgd: true
+  white_bkgd: false
   perturb: 1.0
   lindisp: false
 
@@ -41,8 +41,8 @@ model:
   mask_ratio: 0.75
   num_views: 6
 
-  near: 0.0
-  far: 1.0
+  near: 0.1
+  far: 2.5
   chunk: 32768
 
 train:
